insert svg to index.html

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
 <p><a href="http://www.davidrumsey.com/luna/servlet/detail/RUMSEY%7E8%7E1%7E200375%7E3001080:The-Histomap--Four-Thousand-Years-O">http://www.davidrumsey.com/luna/servlet/detail/RUMSEY~8~1~200375~3001080:The-Histomap--Four-Thousand-Years-O</a></p>
       </section>
+      <object data="WorldHistoryMap.svg" type="image/svg+xml">
+      </object>
     </div>
 
     <!-- FOOTER  -->
