link img on index.html to svg

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p>The idea is from "The Histomap. Four Thousand Years Of World History. Relative Power Of Contemporary States, Nations And Empires. Copyright by John B. Sparks. Published by Histomap, Inc. Chicago, Ill. Printed and distributed in the U.S.A. by Rand McNally &amp; Co., Chicago, Ill."</p>
 
 <p><a href="http://www.davidrumsey.com/luna/servlet/detail/RUMSEY%7E8%7E1%7E200375%7E3001080:The-Histomap--Four-Thousand-Years-O">http://www.davidrumsey.com/luna/servlet/detail/RUMSEY~8~1~200375~3001080:The-Histomap--Four-Thousand-Years-O</a></p>
-      <p><img src="WorldHistoryMap.svg" type="image/svg+xml"></img></p>
+      <p><a href="WorldHistoryMap.svg"><img src="WorldHistoryMap.svg" type="image/svg+xml"></img></a></p>
       </section>
     </div>
 
